--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
+    "postinstall": "yarn build",
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
